Add api for checking pull requests
