# handler.go
@@ -42,6 +42,15 @@ type forkRepositoryResponse struct {
 	Error string                     `json:"error"`
 }
 
+type pullRequestCheckResponseData struct {
+	IsMergeable bool `json:"is_mergeable"`
+}
+
+type pullRequestCheckResponse struct {
+	Data  pullRequestCheckResponseData `json:"data"`
+	Error string                       `json:"error"`
+}
+
 type pullRequestMergeResponseData struct {
 	Merged         bool   `json:"merged"`
 	MergeCommitSha string `json:"merge_commit_sha"`
@@ -238,6 +247,68 @@ func (s *Server) pullRequestCommitsHandler(w http.ResponseWriter, r *http.Reques
 
 	commitShas := strings.Split(logs, "\n")
 	json.NewEncoder(w).Encode(commitShas)
+}
+
+func (s *Server) pullRequestCheckHandler(w http.ResponseWriter, r *http.Request) {
+	var body utils.PullRequestMergePostBody
+	var resp pullRequestCheckResponse
+
+	decoder := json.NewDecoder(r.Body)
+	err := decoder.Decode(&body)
+	if err != nil {
+		resp.Error = http.StatusText(http.StatusBadRequest)
+		b, _ := json.Marshal(resp)
+		http.Error(w, string(b), http.StatusBadRequest)
+		return
+	}
+
+	quarantineRepoPath, err := utils.CreateQuarantineRepo(body.BaseRepositoryID, body.HeadRepositoryID, body.BaseBranch, body.HeadBranch)
+	if err != nil {
+		resp.Error = http.StatusText(http.StatusInternalServerError)
+		b, _ := json.Marshal(resp)
+		http.Error(w, string(b), http.StatusInternalServerError)
+		return
+	}
+	defer os.RemoveAll(quarantineRepoPath)
+
+	trackingBranch := "tracking"
+
+	// Read base branch index
+	cmd := exec.Command("git", "read-tree", "HEAD")
+	cmd.Dir = quarantineRepoPath
+	out, err := cmd.Output()
+	if err != nil {
+		log.Printf("git read-tree HEAD: %v\n%s\n", err, string(out))
+		resp.Error = fmt.Sprintf("Unable to read base branch in to the index: %v\n%s\n", err, string(out))
+		b, _ := json.Marshal(resp)
+		http.Error(w, string(b), http.StatusInternalServerError)
+		return
+	}
+
+	commitTimeStr := time.Now().Format(time.RFC3339)
+
+	// Because this may call hooks we should pass in the environment
+	env := append(os.Environ(),
+		"GIT_AUTHOR_NAME="+body.UserName,
+		"GIT_AUTHOR_EMAIL="+body.UserEmail,
+		"GIT_AUTHOR_DATE="+commitTimeStr,
+		"GIT_COMMITTER_NAME="+body.UserName,
+		"GIT_COMMITTER_EMAIL="+body.UserEmail,
+		"GIT_COMMITTER_DATE="+commitTimeStr,
+	)
+
+	cmd = exec.Command("git", "merge", "--no-ff", "--no-commit", trackingBranch)
+	cmd.Env = env
+	if err := utils.RunMergeCommand(&body, cmd, quarantineRepoPath); err != nil {
+		log.Printf("Unable to merge tracking into base: %v\n", err)
+		resp.Error = err.Error()
+		b, _ := json.Marshal(resp)
+		http.Error(w, string(b), http.StatusInternalServerError)
+		return
+	}
+
+	resp.Data.IsMergeable = true
+	json.NewEncoder(w).Encode(resp)
 }
 
 func (s *Server) pullRequestMergeHandler(w http.ResponseWriter, r *http.Request) {
